--- a/huv-api/package.json
+++ b/huv-api/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.4",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "form-data": "^4.0.5",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "mssql": "^12.2.0",
     "multer": "^1.4.5-lts.1",
