--- a/huv-api/package.json
+++ b/huv-api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create-tables": "node src/scripts/create-tables-and-check.js"
   },
   "keywords": [],
   "author": "",
